--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
     <div id="pendant"></div>
     <div id="pendant"></div>
 
-    <button style="display: block;" onclick="print()">Click this button when ready to print</button>
+    <button style="display: block; padding: .5rem; margin: auto;" onclick="print()">Click this button when ready to print</button>
 
     <script src="app.js"></script>
 </body>
