--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
             <label for="customer-photo-upload">Upload customer picture</label>
             <input type="file" name="customer-photo-upload" id="customer-photo-upload">
         </div>
-        <div>
+        <!-- <div>
             <label for="bg-repeat">Check this box if you want the picture to repeat</label>
             <input type="checkbox" name="bg-repeat" id="bg-repeat">
-        </div>
+        </div> -->
         <div>
             <label for="empty-space-color">Choose color to fill empty space</label>
             <input type="color" name="empty-space-color" id="empty-space-color">
@@ -114,6 +114,7 @@
         background-size: 100%;
         border-radius: 50%;
         background-position: 50% 50%;
+        background-repeat: no-repeat;
     }
 
     #pendant-info > div {
