--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
     <div id="pendant"></div>
     <div id="pendant"></div>
 
-    <div>
+    <!-- <div>
         <p>Before printing, make sure glossy paper is in printer and that your phone is connected to the house WiFi. Once you have read these directions, click on the button at the bottom of this page.</p>
 
         <p>After printing, measure picture to make sure it is the correct size and that the picture is not too dark or too bright.</p>
@@ -86,9 +86,7 @@
             <h3>Printing directions (Apple)</h3>
             <p>When you press the button at the bottom, the print screen will show up. Select HP OfficeJet 3830. Make sure "black & white" is NOT checked (it will be green if it is checked). Click on "Media & Quality". Put "print quality" to "best". Now press "Print".</p>
         </div>
-        
-        
-    </div>
+    </div> -->
 
     <hr>
 
