--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
             </datalist>
         </div>
         <div>
-            <label for="brightness">Brightness <!-- <span id="brightness-value-text">#</span> <br> (try 1.1 - 1.2 for light skinned, try 1.3 - 1.5 for dark skinned)</label> -->
+            <label for="brightness">Brightness <span id="brightness-value-text">#</span> <!-- <br> (try 1.1 - 1.2 for light skinned, try 1.3 - 1.5 for dark skinned)</label> -->
             <input type="range" name="brightness" id="brightness" min="0.5" max="2" value="1.0" step="0.05" list="brightness-ticks">
 
             <datalist id="brightness-ticks">
